[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/blobenemy1.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://Bwark.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 25.6351

[sub_resource type="CircleShape2D" id=2]
radius = 28.0234

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 160.371, 81.6772 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
speed_bwark = 0.8
Bwark = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area" type="Area2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="Area"]
shape = SubResource( 2 )

[node name="TimerFire" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FirePoint" type="Position2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 500 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="TimerFire" to="." method="_on_TimerFire_timeout"]
